# Discord-Clone-Server

./: Cargo.toml
src/: main.rs  utils.rs
src/gql_objects/: channel.rs  message.rs  user.rs
