[package]
name = "discord-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.9"
juniper_rocket = "0.8.1"
rocket = "0.5.0-rc.1"
mysql = "22.1.0"
bcrypt = "0.13"
uuid = {version="0.8", features=["v4"]}
